# abcdl_RLLAB

./: .gitignore  pyproject.toml
abcdl/: __init__.py  backends.py  constants.py  dataset.py  episode.py  hf.py  rewards.py  writer.py
abcdl/convert/: lerobot.py  mcap_abcdl.py
abcdl/format/: encode.py  reader.py  writer.py
abcdl/mcap/: reader.py  writer.py
abcdl/mcap/schemas/: __init__.py  abc.proto  abc_pb2.py
docs/specs/: 2026-06-26-abcdl-package-design.md
docs/superpowers/plans/: 2026-06-26-abcdl-consumers.md  2026-06-26-abcdl-core.md
tests/: conftest.py  test_backends.py  test_convert.py  test_convert_lerobot.py  test_dataset.py  test_dataset_hub.py  test_encode.py  test_episode.py  test_format_roundtrip.py  test_frame_features.py  test_hf.py  test_mcap_reader.py  test_mcap_roundtrip.py  test_scaffold.py  test_schemas.py  test_writer.py
