[project]
name = "abcdl"
version = "0.1.0"
description = "A Behavior Cloning Dataloader — ABC MP4+binary and MCAP data layer"
requires-python = ">=3.10,<3.13"
dependencies = [
    "numpy",
    "torch",
    "torchcodec",
    "mcap",
    "mcap-protobuf-support",
    "protobuf",
    "foxglove-schemas-protobuf",
]

[project.optional-dependencies]
lerobot = ["lerobot"]
s3 = ["s3fs", "boto3"]
dev = ["pytest"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["abcdl*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
